--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="apple-touch-icon" href="./assets/images/favicon.png">
 
  <!-- Facebook integration -->
-<meta property="og:title" content="Simply Docs Demo">
+<meta property="og:title" content="Fanyu Wang">
 <meta property="og:image" content="./assets/images/OG_image.png">
 <meta property="og:url" content="https://marketingpipeline.github.io/Simply-Docs/">
 <meta property="og:type" content="article">
