--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   
 </nav>
 
-      <h1>Simply Docs</h1>
-      <p>A Free Documentation / Blog Template built using Simple.css</p>
+      <h1>Fanyu Wang</h1>
+      <p>Fanyu Wang received the Bachelor of Management degree from the Dalian Maritime University, Dalian, China, in 2016. He is currently working toward the master's degree with the Jiangnan University, Wuxi, China. He serves as a member of Cole Group in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province, advised by Prof. Zhenping Xie. His research interests include the interpretable deep learning methods in Natural Language Processing, which include Chinese spelling correction and Chinese grammatical correction.</p>
     </header>
 <main>
 <h2>Simply Docs / Blog</h2>
