--- a/index.html
+++ b/index.html
@@ -45,24 +45,39 @@
 </nav>
 
       <h1>Fanyu Wang</h1>
-      <p>Fanyu Wang received the Bachelor of Management degree from the Dalian Maritime University, Dalian, China, in 2016. He is currently working toward the master's degree with the Jiangnan University, Wuxi, China. He serves as a member of Cole Group in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province, advised by Prof. Zhenping Xie. His research interests include the interpretable deep learning methods in Natural Language Processing, which include Chinese spelling correction and Chinese grammatical correction.</p>
+      <p>Fanyu Wang received the Master of Engineering degree from Jiangnan University, Wuxi, China. He serves as a member of in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province, advised by Prof. Zhenping Xie. His research interests include the interpretable deep learning methods in Natural Language Processing, which include Chinese spelling correction and Chinese grammatical correction.</p>
     </header>
 <main>
-<h2>Simply Docs / Blog</h2>
-<p>A clean, easy to edit free HTML template that you can use for a personal blog or for documentation purposes for your next project! Some cool features about this template include the following:</p>
+<h2>Education</h2>
 <ul>
-  <li>An amazing looking <code>blog / documentation</code> template.</li>
-  <li>Ready to host on Github Pages!</li>
-  <li>Automagic flipping to dark mode.</li>
-  <li>Fully responsive.</li>
-  <li>Make changes using only standard HTML elements!</li>
-  <li>Easy to edit!</li>
-  <li style="color:blue;">Apply your own CSS style with ease!</li>
-  <li>Super lightweight & <strong>fast</strong>.</li>
-	<a href="/Simply-Docs/pages/documentation#syntax_highlighting"><li>Syntax highlighting (Click to find out more)</li> 
-	</a> 
-	<a href="/Simply-Docs/pages/documentation#markdown_example"><li>Markdown Support! (Click to find out more)</li> 
-	</a> 
+<li>09/2020 - 06/2023 M.S. in Jiangnan University (China)</li>
+<li>09/2016 - 06/2020 B.S. in Dalian Maritime University (China)</li>
+</ul>
+<h2>Professional Affiliations</h2>
+<ul>
+<li>05/2020 - current: Research Assistant in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
+<li>10/2020 - 05/2023: Student Member in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
+</ul>
+<h2>Publications</h2>
+<ul>
+<a href="https://arxiv.org/abs/2305.11543"><li>Fanyu Wang and Zhenping Xie. Constructing Character-Context-Coupled Space with Associative Knowledge for Interpretable Language Modeling. (Accepted) In Findings of 61th Annual Meeting of the Association for Computational
+Linguistics. </li>
+
+<a href="https://link.springer.com/chapter/10.1007/978-3-031-15931-2_14"><li>Fanyu Wang and Zhenping Xie. An Adversarial Multi-Task Learning Method for Chinese Text Correction with Semantic Detection. In 31st International Conference on Artificial Neural Networks, (ICANN2022).Springer. Bristol,
+England (Oral). </li>
+
+<li>Fanyu Wang, Huihui Shao and Zhenping Xie. AxBERT: An Explainable Chinese Spelling Correction Method Driven by Associative Knowledge Network. (Under Reviewing)</li>
+
+<a href="https://ieeexplore.ieee.org/document/10016369"><li>Tingting Li, Fanyu Wang (Co-first writer), Ying Zhou and Zhenping Xie. Visual illusion cognition dataset construction and recognition performance by deep neural networks. In 8th IEEE International Conference on Cloud Computing and Intelligence System (2022). Chengdu, China (Oral).</li>
+
+<a href="https://link.springer.com/article/10.1007/s40747-022-00757-y"><li>Yulin Li, Zhenping Xie and Fanyu Wang. An associative knowledge network model for interpretable semantic representation of noun context. Complex Intell. Syst. (2022).</li>
+
+<a href="https://ieeexplore.ieee.org/document/10108610"><li>Tingting Li, Fanyu Wang and Zhenping Xie. Space Topology Change Mostly Attracts Human Attention: An Implicit Feedback VR Driving System. In 30th IEEE Conference on Virtual Reality and 3D User Interfaces Abstract and Workshop (IEEEVRW 2023).</li>
+	
+<li>Bin Zhai, Fanyu Wang and Zhenping Xie. An Explainable Enterprise Credit Evaluation Method Based on Logistic Regression Integration. In 2nd International Academic Conference on Blockchain, Information Technology and Smart Finance. (2023)</li>
+
+<li>Jun Cao, Fanyu Wang and Zhenping Xie, et al. Imputation Algorithm for Multi view financial Data based on weighted random Forest. In 2nd International Conference on Urban Planning and Regional Economy, 2023.</li>
+
 </ul>
 </main>
 <a href="https://github.com/MarketingPipeline/Simply-Docs/archive/refs/heads/main.zip"><button>Download This Template</button></a>
