--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <a href="https://drive.google.com/file/d/1HpQaWwDjD96YsXGU7lXgeCPeNgjdKgy0/view?usp=drive_link">CV</a>
         
 </nav>
-<img src="./assets/images/OG_image.jpg" alt="Fanyu Wang" title="Fanyu Wang Photo" />
+<img src="./assets/images/OG_image.jpg" width=500 alt="Fanyu Wang" title="Fanyu Wang Photo" />
       <h1>Fanyu Wang</h1>
       <p>Fanyu Wang received the Master of Engineering degree from Jiangnan University, Wuxi, China. He serves as a member of in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province, advised by Prof. Zhenping Xie. His research interests include the interpretable deep learning methods in Natural Language Processing, which include Chinese spelling correction and Chinese grammatical correction.</p>
     </header>
