--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 <main>
 <h2>Education</h2>
 <ul>
-<li>09/2020 - 06/2023 M.S. in Jiangnan University (China)</li>
-<li>09/2016 - 06/2020 B.S. in Dalian Maritime University (China)</li>
+<li>09/2020 - 06/2023: M.S. in Jiangnan University (China)</li>
+<li>09/2016 - 06/2020: B.S. in Dalian Maritime University (China)</li>
 </ul>
 <h2>Professional Affiliations</h2>
 <ul>
@@ -54,19 +54,19 @@
 </ul>
 <h2>Publications</h2>
 <ul>
-<a href="https://arxiv.org/abs/2305.11543"><li>Fanyu Wang and Zhenping Xie. Constructing Character-Context-Coupled Space with Associative Knowledge for Interpretable Language Modeling. (Accepted) In Findings of 61th Annual Meeting of the Association for Computational
-Linguistics. </li>
+<li>Fanyu Wang and Zhenping Xie. Constructing Character-Context-Coupled Space with Associative Knowledge for Interpretable Language Modeling. (Accepted) In Findings of 61th Annual Meeting of the Association for Computational
+Linguistics. </li><a href="https://arxiv.org/abs/2305.11543">Link<\a>
 
-<a href="https://link.springer.com/chapter/10.1007/978-3-031-15931-2_14"><li>Fanyu Wang and Zhenping Xie. An Adversarial Multi-Task Learning Method for Chinese Text Correction with Semantic Detection. In 31st International Conference on Artificial Neural Networks, (ICANN2022).Springer. Bristol,
-England (Oral). </li>
+<li>Fanyu Wang and Zhenping Xie. An Adversarial Multi-Task Learning Method for Chinese Text Correction with Semantic Detection. In 31st International Conference on Artificial Neural Networks, (ICANN2022).Springer. Bristol,
+England (Oral). </li><a href="https://link.springer.com/chapter/10.1007/978-3-031-15931-2_14">Link<\a>
 
 <li>Fanyu Wang, Huihui Shao and Zhenping Xie. AxBERT: An Explainable Chinese Spelling Correction Method Driven by Associative Knowledge Network. (Under Reviewing)</li>
 
-<a href="https://ieeexplore.ieee.org/document/10016369"><li>Tingting Li, Fanyu Wang (Co-first writer), Ying Zhou and Zhenping Xie. Visual illusion cognition dataset construction and recognition performance by deep neural networks. In 8th IEEE International Conference on Cloud Computing and Intelligence System (2022). Chengdu, China (Oral).</li>
+<li>Tingting Li, Fanyu Wang (Co-first writer), Ying Zhou and Zhenping Xie. Visual illusion cognition dataset construction and recognition performance by deep neural networks. In 8th IEEE International Conference on Cloud Computing and Intelligence System (2022). Chengdu, China (Oral).</li><a href="https://ieeexplore.ieee.org/document/10016369">Link<\a>
 
-<a href="https://link.springer.com/article/10.1007/s40747-022-00757-y"><li>Yulin Li, Zhenping Xie and Fanyu Wang. An associative knowledge network model for interpretable semantic representation of noun context. Complex Intell. Syst. (2022).</li>
+<li>Yulin Li, Zhenping Xie and Fanyu Wang. An associative knowledge network model for interpretable semantic representation of noun context. Complex Intell. Syst. (2022).</li><a href="https://link.springer.com/article/10.1007/s40747-022-00757-y">Link<\a>
 
-<a href="https://ieeexplore.ieee.org/document/10108610"><li>Tingting Li, Fanyu Wang and Zhenping Xie. Space Topology Change Mostly Attracts Human Attention: An Implicit Feedback VR Driving System. In 30th IEEE Conference on Virtual Reality and 3D User Interfaces Abstract and Workshop (IEEEVRW 2023).</li>
+<li>Tingting Li, Fanyu Wang and Zhenping Xie. Space Topology Change Mostly Attracts Human Attention: An Implicit Feedback VR Driving System. In 30th IEEE Conference on Virtual Reality and 3D User Interfaces Abstract and Workshop (IEEEVRW 2023).</li><a href="https://ieeexplore.ieee.org/document/10108610">Link<\a>
 	
 <li>Bin Zhai, Fanyu Wang and Zhenping Xie. An Explainable Enterprise Credit Evaluation Method Based on Logistic Regression Integration. In 2nd International Academic Conference on Blockchain, Information Technology and Smart Finance. (2023)</li>
 
