--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
 </nav>
 <img src="./assets/images/OG_image.jpg" width=500 alt="Fanyu Wang" title="Fanyu Wang Photo" />
       <h1>Fanyu Wang</h1>
-      <p>Fanyu Wang received the Master of Engineering degree from Jiangnan University, Wuxi, China. He serves as a member of in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province, advised by Prof. Zhenping Xie. His research interests include the interpretable deep learning methods in Natural Language Processing, which include Chinese spelling correction and Chinese grammatical correction.</p>
+      <p>Fanyu Wang received the Master of Engineering degree from Jiangnan University, Wuxi, China. He serves as a member of ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province, advised by Prof. Zhenping Xie. His research interests include the interpretable deep learning methods in Natural Language Processing, which include Chinese spelling correction and Chinese grammatical correction.</p>
     </header>
 <main>
 <h2>Education</h2>
 <ul>
+<li>06/2023 - current: Applying for Ph.D.</li>
 <li>09/2020 - 06/2023: M.S. in Jiangnan University (China)</li>
 <li>09/2016 - 06/2020: B.S. in Dalian Maritime University (China)</li>
 </ul>
