--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   </head>
 <header>
    <nav>
-  
+  <a href="mailto:fanyu_wang@stu.jiangnan.edu.cn">Email</a>
+
   <a href="https://twitter.com/fanyuuwang">Twitter</a>
   
   <a href="https://drive.google.com/file/d/1HpQaWwDjD96YsXGU7lXgeCPeNgjdKgy0/view?usp=drive_link">CV</a>
@@ -73,8 +74,6 @@ England (Oral). <a href="https://link.springer.com/chapter/10.1007/978-3-031-159
 
 </ul>
 </main>
-<a href="https://github.com/MarketingPipeline/Simply-Docs/archive/refs/heads/main.zip"><button>Download This Template</button></a>
-
 
 
 <footer>
