--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@ England (Oral). <a href="https://link.springer.com/chapter/10.1007/978-3-031-159
 
 
 <footer>
-      <p>Simply Docs was created by <a href="https://github.com/MarketingPipeline/">Marketing Pipeline</a> and is licensed under the MIT license.</p>
-  <small>© 2014 Some company name</small>
-      <address>email@email.com</address>
+      <p>Created by Fanyu Wang Based on <a href="https://github.com/MarketingPipeline/Simply-Docs">Simply-Docs</a></p>
     </footer>
    
  <script src="https://cdn.jsdelivr.net/gh/MarketingPipeline/Markdown-Tag/markdown-tag.js"></script> 
