--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
 </ul>
 <h2>Publications</h2>
 <ul>
-<li>Fanyu Wang and Zhenping Xie. Constructing Character-Context-Coupled Space with Associative Knowledge for Interpretable Language Modeling. (Accepted) In Findings of 61th Annual Meeting of the Association for Computational
+<li align="justify">Fanyu Wang and Zhenping Xie. Constructing Character-Context-Coupled Space with Associative Knowledge for Interpretable Language Modeling. (Accepted) In Findings of 61th Annual Meeting of the Association for Computational
 Linguistics. <a href="https://arxiv.org/abs/2305.11543">Link</a></li>
 	
-<li>Fanyu Wang and Zhenping Xie. An Adversarial Multi-Task Learning Method for Chinese Text Correction with Semantic Detection. In 31st International Conference on Artificial Neural Networks, (ICANN2022).Springer. Bristol,
+<li align="justify">Fanyu Wang and Zhenping Xie. An Adversarial Multi-Task Learning Method for Chinese Text Correction with Semantic Detection. In 31st International Conference on Artificial Neural Networks, (ICANN2022).Springer. Bristol,
 England (Oral). <a href="https://link.springer.com/chapter/10.1007/978-3-031-15931-2_14">Link</a></li>
 
-<li>Fanyu Wang, Huihui Shao and Zhenping Xie. AxBERT: An Explainable Chinese Spelling Correction Method Driven by Associative Knowledge Network. (Under Reviewing)</li>
+<li align="justify">Fanyu Wang, Huihui Shao and Zhenping Xie. AxBERT: An Explainable Chinese Spelling Correction Method Driven by Associative Knowledge Network. (Under Reviewing)</li>
 
-<li>Tingting Li, Fanyu Wang (Co-first writer), Ying Zhou and Zhenping Xie. Visual illusion cognition dataset construction and recognition performance by deep neural networks. In 8th IEEE International Conference on Cloud Computing and Intelligence System (2022). Chengdu, China (Oral). <a href="https://ieeexplore.ieee.org/document/10016369">Link</a></li>
-<li>Yulin Li, Zhenping Xie and Fanyu Wang. An associative knowledge network model for interpretable semantic representation of noun context. Complex Intell. Syst. (2022). <a href="https://link.springer.com/article/10.1007/s40747-022-00757-y">Link</a></li>
-<li>Tingting Li, Fanyu Wang and Zhenping Xie. Space Topology Change Mostly Attracts Human Attention: An Implicit Feedback VR Driving System. In 30th IEEE Conference on Virtual Reality and 3D User Interfaces Abstract and Workshop (IEEEVRW 2023). <a href="https://ieeexplore.ieee.org/document/10108610">Link</a></li>
+<li align="justify">Tingting Li, Fanyu Wang (Co-first writer), Ying Zhou and Zhenping Xie. Visual illusion cognition dataset construction and recognition performance by deep neural networks. In 8th IEEE International Conference on Cloud Computing and Intelligence System (2022). Chengdu, China (Oral). <a href="https://ieeexplore.ieee.org/document/10016369">Link</a></li>
+<li align="justify">Yulin Li, Zhenping Xie and Fanyu Wang. An associative knowledge network model for interpretable semantic representation of noun context. Complex Intell. Syst. (2022). <a href="https://link.springer.com/article/10.1007/s40747-022-00757-y">Link</a></li>
+<li align="justify">Tingting Li, Fanyu Wang and Zhenping Xie. Space Topology Change Mostly Attracts Human Attention: An Implicit Feedback VR Driving System. In 30th IEEE Conference on Virtual Reality and 3D User Interfaces Abstract and Workshop (IEEEVRW 2023). <a href="https://ieeexplore.ieee.org/document/10108610">Link</a></li>
 	
-<li>Bin Zhai, Fanyu Wang and Zhenping Xie. An Explainable Enterprise Credit Evaluation Method Based on Logistic Regression Integration. In 2nd International Academic Conference on Blockchain, Information Technology and Smart Finance. (2023)</li>
+<li align="justify">Bin Zhai, Fanyu Wang and Zhenping Xie. An Explainable Enterprise Credit Evaluation Method Based on Logistic Regression Integration. In 2nd International Academic Conference on Blockchain, Information Technology and Smart Finance. (2023)</li>
 
-<li>Jun Cao, Fanyu Wang and Zhenping Xie, et al. Imputation Algorithm for Multi view financial Data based on weighted random Forest. In 2nd International Conference on Urban Planning and Regional Economy, 2023.</li>
+<li align="justify">Jun Cao, Fanyu Wang and Zhenping Xie, et al. Imputation Algorithm for Multi view financial Data based on weighted random Forest. In 2nd International Conference on Urban Planning and Regional Economy, 2023.</li>
 
 </ul>
 </main>
