--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
   <a href="https://twitter.com/fanyuuwang">Twitter</a>
   
-        
+  <a href="https://www.semanticscholar.org/author/Fanyu-Wang/113437495">SemanticScholar</a>
+
 </nav>
 <img src="./assets/images/OG_image.jpg" width=500 alt="Fanyu Wang" title="Fanyu Wang Photo" />
       <h1>Fanyu Wang</h1>
