--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 </ul>
 <h2>Professional Affiliations</h2>
 <ul>
-<li>05/2020 - current: Research Assistant in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
-<li>10/2020 - 05/2023: Student Member in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
+<li align="justify">05/2020 - current: Research Assistant in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
+<li align="justify">10/2020 - 05/2023: Student Member in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
 </ul>
 <h2>Publications</h2>
 <ul>
