--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
    <nav>
   <a href="mailto:fanyu_wang@stu.jiangnan.edu.cn">Email</a>
 
+<a href="paper_introduction.html">Paper</a>
+
   <a href="https://twitter.com/fanyuuwang">Twitter</a>
 
   <a href="www.linkedin.com/in/fanyuuwang">Linkedin</a>
