--- a/paper_introduction.html
+++ b/paper_introduction.html
@@ -43,16 +43,19 @@
 	  
 
 </nav>
-<img src="./assets/images/w2c.png" width=500 alt="W2C" title="W2C Photo" />
-      <h1>W2CSpace</h1>
+<img src="./assets/images/w2c.png" width=800 alt="W2C" title="W2C Photo" />
+      <h2>W2CSpace</h2>
       <p align="justify">As the foundation of current natural language processing methods, pre-trained language model has achieved excellent performance. However, the black-box structure of the deep neural network in pre-trained language models seriously limits the interpretability of the language modeling process. After revisiting the coupled requirement of deep neural representation and semantics logic of language modeling, a Word-Context-Coupled Space (W2CSpace) is proposed by introducing the alignment processing between uninterpretable neural representation and interpretable statistical logic. Moreover, a clustering process is also designed to connect the word- and context-level semantics. Specifically, an associative knowledge network (AKN), considered interpretable statistical logic, is introduced in the alignment process for word-level semantics. Furthermore, the context-relative distance is employed as the semantic feature for the downstream classifier, which is greatly different from the current uninterpretable semantic representations of pre-trained models. Our experiments for performance evaluation and interpretable analysis are executed on several types of datasets, including SIGHAN, Weibo, and ChnSenti. Wherein a novel evaluation strategy for the interpretability of machine learning models is first proposed. According to the experimental results, our language model can achieve better performance and highly credible interpretable ability compared to related state-of-the-art methods.</p>
     </header>
 <main>
-<h2>Education</h2>
+<h2>METHODOLOGY</h2>
 <ul>
-<li>06/2023 - current: Applying for Ph.D.</li>
-<li>09/2020 - 06/2023: M.S. in Jiangnan University (China)</li>
-<li>09/2016 - 06/2020: B.S. in Dalian Maritime University (China)</li>
+<li>“Word-level semantics in W2CSpace is aligned with AKN distribution.”</li>
+	<p>W2CSpace aims to realize interpretably language modeling by introducing context-aware language representations. The word-level semantics, mapped from BERT representations with a mapping network, are aligned with introduced statistical AKN distribution. With the training process for alignment process, the interpretable knowledge is ingested into mapped representations on word-level.</p>
+<li>“Context abstraction is realized by 𝒌-means clustering with merge matrix.”</li>
+	<p>Humans are able to recognize emotion from language, action, and so on (Barrett et al., 2007). Specifically, in linguistics, humans recognize emotion with the context in the given sentences. We use 𝒌-means clustering process based on cosine distance for abstract context-level semantics from word-level semantics. A merge matrix is introduced on the clusters to establish the communication between different clusters, which reduce the impact of the 𝑘 number in 𝑘-means for reasonable clustering process.</p>
+<li>“Input text are interpretably modeled based on context relations.”</li>
+	<p>The input text are firstly mapped into word-level semantics in W2CSpace, and calculate the cosine distance with the context clusters, which named contextrelative distance. Context-relative distance is able to directly feed into downstream classifier in fine-tuning tasks with minimal modification.</p>
 </ul>
 <h2>Professional Affiliations</h2>
 <ul>
