--- a/paper_introduction.html
+++ b/paper_introduction.html
@@ -44,9 +44,12 @@
 
 </nav>
 <img src="./assets/images/w2c.png" width=800 alt="W2C" title="W2C Photo" />
-      <h2>W2CSpace</h2>
+      <h2>Word to Context Space</h2>
     </header>
 <main>
+	<p>Accepted for ACL2023, Findings</p>
+<h2>ABSTRACT</h2>
+	<p>As the foundation of current natural language processing methods, pre-trained language model has achieved excellent performance. However, the black-box structure of the deep neural network in pre-trained language models seriously limits the interpretability of the language modeling process. By revisiting the coupled requirement of deep neural representation and semantics logic of language modeling, a Word-Context-Coupled Space (W2CSpace) is proposed by introducing the alignment processing between uninterpretable neural representation and interpretable statistical logic. Moreover, a clustering process is also designed to connect the word- and context-level semantics. Specifically, an associative knowledge network (AKN, Li et al., 2022), considered interpretable statistical logic, is introduced in the alignment process for word-level semantics. Furthermore, the context-relative distance is employed as the semantic feature for the down-stream classifier, which is greatly different from the current uninterpretable semantic representations of pre-trained models. Our experiments for performance evaluation and interpretable analysis are executed on several types of datasets, including SIGHAN, Weibo, and ChnSenti. Wherein a novel evaluation strategy for the interpretability of machine learning models is first proposed. According to the experimental results, our language model can achieve better performance and highly credible interpretable ability compared to related state-of-the-art methods.</p>
 <h2>METHODOLOGY</h2>
 <ul>
 	<img src="./assets/images/w2c_main.png" width=800 alt="W2C" title="W2C Photo" />
