--- a/paper_introduction.html
+++ b/paper_introduction.html
@@ -43,7 +43,7 @@
 	  
 
 </nav>
-      <h2>Word to Context Space</h2>
+      <h2>W2CSpace: Interpretable Language Modeling</h2>
 	<img src="./assets/images/w2c.png" width=800 alt="W2C" title="W2C Photo" />
     </header>
 <main>
