--- a/icann.html
+++ b/icann.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>W2CSpace|Introduction</title>
+<title>AML|Introduction</title>
   
 <meta name="description" content="A showcase of Simply Docs by MarketingPipeline built using Simple.CSS">
 
@@ -43,33 +43,31 @@
 	  
 
 </nav>
-      <h2>W2CSpace: Interpretable Language Modeling</h2>
-	<img src="./assets/images/w2c.png" width=800 alt="W2C" title="W2C Photo" />
+      <h2>ZH Text Correction with Semantic Detection</h2>
+	<img src="./assets/images/icann.png" width=800 alt="icann" title="ICANN Photo" />
     </header>
 <main>
-	<p>Accepted for ACL2023, Findings. <a href="https://github.com/fanyuuwang/C3Space">Code</a></p>
+	<p>Published on ICANN2022. <a href="https://github.com/fanyuuwang/AML">Code</a></p>
 <h2>ABSTRACT</h2>
-	<p>As the foundation of current natural language processing methods, pre-trained language model has achieved excellent performance. However, the black-box structure of the deep neural network in pre-trained language models seriously limits the interpretability of the language modeling process. By revisiting the coupled requirement of deep neural representation and semantics logic of language modeling, a Word-Context-Coupled Space (W2CSpace) is proposed by introducing the alignment processing between uninterpretable neural representation and interpretable statistical logic. Moreover, a clustering process is also designed to connect the word- and context-level semantics. Specifically, an associative knowledge network (AKN, Li et al., 2022), considered interpretable statistical logic, is introduced in the alignment process for word-level semantics. Furthermore, the context-relative distance is employed as the semantic feature for the down-stream classifier, which is greatly different from the current uninterpretable semantic representations of pre-trained models. Our experiments for performance evaluation and interpretable analysis are executed on several types of datasets, including SIGHAN, Weibo, and ChnSenti. Wherein a novel evaluation strategy for the interpretability of machine learning models is first proposed. According to the experimental results, our language model can achieve better performance and highly credible interpretable ability compared to related state-of-the-art methods.</p>
+	<p>Text correction, especially the semantic correction of more widely used scenes, is strongly required to improve, for the fluency and writing efficiency of the text. An adversarial multi-task learning method is proposed to enhance the modeling and detection ability of character polysemy in Chinese sentence context. Wherein, two models, the masked language model and scoring language model, are introduced as a pair of not only coupled but also adversarial learning tasks. Moreover, the Monte Carlo tree search strategy and a policy network are introduced to accomplish the efficient Chinese text correction task with semantic detection. The experiments are executed on three datasets and five comparable methods, and the experimental results show that our method can obtain good performance in Chinese text correction task for better semantic rationality.</p>
 <h2>METHODOLOGY</h2>
 <ul>
-	<img src="./assets/images/w2c_main.png" width=800 alt="W2C" title="W2C Photo" />
-	<p>The subfigs exhibit the training process for our interpretable language modeling method. (1a) The BERT encoder is firstly fine-tuned under the downstream task. We map the feature 𝐹𝐵 from fine-tuned BERT encoder to the word elements 𝐶 in W2CSpace ("T" refer to "trained"); (1b) After the training of the mapping network with a reconstruction and alignment task, the word semantics are clustered to high-dimensional context semantics 𝑋 ; (1c) During interpretable language modeling process, the context semantics inW2CSpace is gradually optimized by multiplying the merge matrix. 𝑀M We compute the context-relative distance of the mapped feature C within the optimized context ത𝑋 for the downstream task.</p>
-<li>“Word-level semantics in W2CSpace is aligned with AKN distribution.”</li>
-	<p>W2CSpace aims to realize interpretably language modeling by introducing context-aware language representations. The word-level semantics, mapped from BERT representations with a mapping network, are aligned with introduced statistical AKN distribution. With the training process for alignment process, the interpretable knowledge is ingested into mapped representations on word-level.</p>
-<li>“Context abstraction is realized by 𝒌-means clustering with merge matrix.”</li>
+	<li>Adversarial Multi-Task Learning</li>
+	<img src="./assets/images/icann_main.png" width=800 alt="icann" title="ICANN Photo" />
+	<p>We consider that adversarial multi-task learning is a model training strategy for two adversarial and cooperative model tasks. For Chinese text correction, two core task models, including the masked language model and the scoring language model, are considered in this study. Wherein, the masked language model is to predict reasonable characters in the masked position of a sentence, and the scoring language model is to examine the semantic quality of every character in its sentence context.
+
+A BERT encoder is introduced as the common encoder for scoring language model and masked language model. The adversarial multi-task learning is composed of the adversarial learning phase and multi-task learning phase. The multi-task learning aims to find the optimal semantic representation using the common encoder for different down-stream tasks. While, the adversarial learning is to enhance the robustness of classifier in distinguishing similar tokens in a sentence.</p>
+	<li>Chinese Text Correction with Semantic Error Detection</li>
+	<img src="./assets/images/icann_algo.png" width=800 alt="icann" title="ICANN Photo" />
+	<p>In order to realize the correction of a sentence with possible errors, the Monte Carlo tree search (MCTS) strategy is introduced to find and correct possible error characters. Wherein, all possible positions with error characters can be found by means of the trained scoring language model, and the most reasonable (correct) sentence can be recommended based on the combined use of the trained masked language and scoring language models.</p>
+	<li>“Context abstraction is realized by 𝒌-means clustering with merge matrix.”</li>
 	<p>Humans are able to recognize emotion from language, action, and so on (Barrett et al., 2007). Specifically, in linguistics, humans recognize emotion with the context in the given sentences. We use 𝒌-means clustering process based on cosine distance for abstract context-level semantics from word-level semantics. A merge matrix is introduced on the clusters to establish the communication between different clusters, which reduce the impact of the 𝑘 number in 𝑘-means for reasonable clustering process.</p>
 <li>“Input text are interpretably modeled based on context relations.”</li>
 	<p>The input text are firstly mapped into word-level semantics in W2CSpace, and calculate the cosine distance with the context clusters, which named contextrelative distance. Context-relative distance is able to directly feed into downstream classifier in fine-tuning tasks with minimal modification.</p>
 </ul>
-<h2>PERFORMANCE AND INTERPRETABILITY RESULTS</h2>
-<ul>
-<li align="justify">"Outstanding performance on token- and sequence-classification"</li>
-	<p>The performance evaluation compose of Chinese spelling correction and Chinese sentiment classification tasks. In Chinese spelling correction task, W2CSpace outperforms most of the baselines both on word- and sentence-level, including SpellGCN (Cheng et al., 2020), HeadFilt (Nguyen et al,. 2021) and so on. The SOTA classification performance of W2CSpace in Chinese sentiment classification demonstrate that, our method can precisely modeling the text with an interpretable representation.</p>
-<li align="justify">"Interpretable analysis procedure based on sentiment classification."</li>
-	<img src="./assets/images/w2c_interpretable.png" width=800 alt="W2C" title="W2C Photo" />
-	<p>Additionally, we also investigate the analysis on the influence of space dimension size 𝑛 and cluster number 𝑘 for W2CSpace. In conclusion, benefits from the introduction of the merge matrix, W2CSpace achieves similar performance on difference settings.</p>
-	<p>As the context clusters are swapped with predicted sentimentally-opposite labels in the interpretable analysis, most of the predicted sentiments are reversed (over 96%). The changes of corresponding sentimental classification results reflects the appropriateness of W2CSpace.</p>
-</ul>
+<h2>Case Study</h2>
+	<img src="./assets/images/icann_case.png" width=800 alt="icann" title="ICANN Photo" />
+	<p>an example is presented including an original correct sentence, a typical wrong sentence generated in our experiment, and five corrected results by four comparable correction methods and our method. For the above different corrected results, the corrected result of our method might be the most reasonable in sentence semantics. Concretely, for the character string with wave underlines in sentences, our method accurately understands the emotion of the given wrong sentence and finds similar words (争得/strive for). Similarly, for the character string with straight under-lines, only our method can give a correction solution that the (中/in) is added. Of course, the last result of our method still has not completely repaired the wrong sentence to the ideal result (original correct sentence), which also reflects the complexity and hardness of the Chinese text correction task.</p>
 </main>
 
 
