--- a/icann.html
+++ b/icann.html
@@ -43,7 +43,7 @@
 	  
 
 </nav>
-      <h2>ZH Text Correction with Semantic Detection</h2>
+      <h2>Chinese Text Correction with Semantic Detection</h2>
 	<img src="./assets/images/icann.png" width=800 alt="icann" title="ICANN Photo" />
     </header>
 <main>
