--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 </ul>
 <h2>Publications</h2>
 <ul>
-<li align="justify">Fanyu Wang and Zhenping Xie. Constructing Character-Context-Coupled Space with Associative Knowledge for Interpretable Language Modeling. (Accepted) In Findings of 61th Annual Meeting of the Association for Computational
-Linguistics. <a href="https://arxiv.org/abs/2305.11543">Link</a></li>
+<li align="justify">Fanyu Wang and Zhenping Xie. Constructing Word-Context-Coupled Space with Associative Knowledge for Interpretable Language Modeling. (Accepted) In Findings of 61th Annual Meeting of the Association for Computational
+Linguistics. <a href="https://aclanthology.org/2023.findings-acl.532/">Link</a></li>
 	
 <li align="justify">Fanyu Wang and Zhenping Xie. An Adversarial Multi-Task Learning Method for Chinese Text Correction with Semantic Detection. In 31st International Conference on Artificial Neural Networks, (ICANN2022).Springer. Bristol,
 England (Oral). <a href="https://link.springer.com/chapter/10.1007/978-3-031-15931-2_14">Link</a></li>
