--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </ul>
 <h2>Publications</h2>
 <ul>
-<li align="justify">Fanyu Wang and Zhenping Xie. Constructing Word-Context-Coupled Space with Associative Knowledge for Interpretable Language Modeling. (Accepted) In Findings of 61th Annual Meeting of the Association for Computational
+<li align="justify">Fanyu Wang and Zhenping Xie. Constructing Word-Context-Coupled Space with Associative Knowledge for Interpretable Language Modeling. In Findings of 61th Annual Meeting of the Association for Computational
 Linguistics. <a href="https://aclanthology.org/2023.findings-acl.532/">Link</a></li>
 	
 <li align="justify">Fanyu Wang and Zhenping Xie. An Adversarial Multi-Task Learning Method for Chinese Text Correction with Semantic Detection. In 31st International Conference on Artificial Neural Networks, (ICANN2022).Springer. Bristol,
