--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Linguistics. <a href="https://aclanthology.org/2023.findings-acl.532/">Link</a><
 <li align="justify">Fanyu Wang and Zhenping Xie. An Adversarial Multi-Task Learning Method for Chinese Text Correction with Semantic Detection. In 31st International Conference on Artificial Neural Networks, (ICANN2022).Springer. Bristol,
 England (Oral). <a href="https://link.springer.com/chapter/10.1007/978-3-031-15931-2_14">Link</a></li>
 
-<li align="justify">Fanyu Wang, Huihui Shao and Zhenping Xie. AxBERT: An Explainable Chinese Spelling Correction Method Driven by Associative Knowledge Network. (Under Reviewing)</li>
+<li align="justify">Fanyu Wang, Huihui Shao and Zhenping Xie. AxBERT: An Explainable Chinese Spelling Correction Method Driven by Associative Knowledge Network. (Under Reviewing, <a href="https://openreview.net/forum?id=nZGu4Ltnl5">Preprint Version</a>)</li>
 
 <li align="justify">Tingting Li, Fanyu Wang (Co-first writer), Ying Zhou and Zhenping Xie. Visual illusion cognition dataset construction and recognition performance by deep neural networks. In 8th IEEE International Conference on Cloud Computing and Intelligence System (2022). Chengdu, China (Oral). <a href="https://ieeexplore.ieee.org/document/10016369">Link</a></li>
 <li align="justify">Yulin Li, Zhenping Xie and Fanyu Wang. An associative knowledge network model for interpretable semantic representation of noun context. Complex Intell. Syst. (2022). <a href="https://link.springer.com/article/10.1007/s40747-022-00757-y">Link</a></li>
