--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Fanyu Wang|Personal Website</title>
+<title>Fanyu Wang</title>
   
 <meta name="description" content="A showcase of Simply Docs by MarketingPipeline built using Simple.CSS">
 
@@ -58,7 +58,7 @@
 </ul>
 <h2>Professional Affiliations</h2>
 <ul>
-<li align="justify">05/2020 - current: Research Assistant in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
+<li align="justify">05/2023 - current: Research Assistant in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
 <li align="justify">10/2020 - 05/2023: Student Member in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
 </ul>
 <h2>Publications</h2>
@@ -77,7 +77,7 @@ England (Oral). <a href="https://link.springer.com/chapter/10.1007/978-3-031-159
 	
 <li align="justify">Bin Zhai, Fanyu Wang and Zhenping Xie. An Explainable Enterprise Credit Evaluation Method Based on Logistic Regression Integration. In 2nd International Academic Conference on Blockchain, Information Technology and Smart Finance. (2023)</li>
 
-<li align="justify">Jun Cao, Fanyu Wang and Zhenping Xie, et al. Imputation Algorithm for Multi view financial Data based on weighted random Forest. In 2nd International Conference on Urban Planning and Regional Economy, 2023.</li>
+<li align="justify">Jun Cao, Fanyu Wang and Zhenping Xie, et al. Imputation Algorithm for Multi view financial Data based on weighted random Forest. In 2nd International Conference on Urban Planning and Regional Economy, 2023.<a href="https://www.atlantis-press.com/proceedings/upre-23/125989908">Link</a></li>
 
 </ul>
 </main>
