--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <main>
 <h2>Education</h2>
 <ul>
-<li>06/2023 - current: Applying for Ph.D.</li>
+<li>06/2023 - current: Potential PhD Student of Monash University</li>
 <li>09/2020 - 06/2023: M.S. in Jiangnan University (China)</li>
 <li>09/2016 - 06/2020: B.S. in Dalian Maritime University (China)</li>
 </ul>
