--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
 
 </nav>
 <img src="./assets/images/OG_image.jpg" width=500 alt="Fanyu Wang" title="Fanyu Wang Photo" />
-      <h1>Fanyu (Penber) Wang</h1>
+      <h1>Fanyu Wang</h1>
       <p align="justify">Fanyu Wang received the Master of Engineering degree from Jiangnan University, Wuxi, China. He serves as a member of ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province, advised by Prof. <a href="https://scholar.google.com/citations?user=IA0PD84AAAAJ&hl">Zhenping Xie</a>. His research interests include the interpretable deep learning methods in Natural Language Processing, which include Chinese spelling correction and Chinese grammatical correction. <a href="https://drive.google.com/file/d/1HpQaWwDjD96YsXGU7lXgeCPeNgjdKgy0/view?usp=drive_link">Download my CV</a></p>
     </header>
 <main>
 <h2>Education</h2>
 <ul>
-<li>06/2023 - current: PhD candidate in Faculty of IT, Monash University</li>
+<li>06/2023 - current: PhD student in HumanISE Lab, Monash University</li>
 <li>09/2020 - 06/2023: M.S. in Jiangnan University (China)</li>
 <li>09/2016 - 06/2020: B.S. in Dalian Maritime University (China)</li>
 </ul>
 <h2>Professional Affiliations</h2>
 <ul>
-<li align="justify">05/2023 - current: Research Assistant in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
+<li align="justify">05/2023 - 01/2024: Research Assistant in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
 <li align="justify">10/2020 - 05/2023: Student Member in ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province</li>
 </ul>
 <h2>Publications</h2>
