--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
 <header>
    <nav>
-  <a href="mailto:fanyu_wang@stu.jiangnan.edu.cn">Email</a>
+  <a href="mailto:fanyu.wang@monash.edu">Email</a>
 
 <a href="paper_introduction.html">Paper</a>
 
@@ -47,12 +47,12 @@
 </nav>
 <img src="./assets/images/OG_image.jpg" width=500 alt="Fanyu Wang" title="Fanyu Wang Photo" />
       <h1>Fanyu Wang</h1>
-      <p align="justify">Fanyu Wang received the Master of Engineering degree from Jiangnan University, Wuxi, China. He serves as a member of ColeGroup, Key Laboratory of Media Design and Software Technology in Jiangsu Province, advised by Prof. <a href="https://scholar.google.com/citations?user=IA0PD84AAAAJ&hl">Zhenping Xie</a>. His research interests include the interpretable deep learning methods in Natural Language Processing, which include Chinese spelling correction and Chinese grammatical correction. <a href="https://drive.google.com/file/d/1HpQaWwDjD96YsXGU7lXgeCPeNgjdKgy0/view?usp=drive_link">Download my CV</a></p>
+      <p align="justify">Fanyu Wang is currently pursuing his PhD in <a href="https://www.monash.edu/it/humanise-lab">HumanISE Lab<\a> at Monash University, under the guidance of Dr. <a href="https://chetanarora.bitbucket.io">Chetan Arora<\a>. He holds a Master of Engineering degree from Jiangnan University, Wuxi, China, and is a member of the ColeGroup at the Key Laboratory of Media Design and Software Technology in Jiangsu Province, where he is advised by Prof. <a href="https://scholar.google.com/citations?user=IA0PD84AAAAJ&hl">Zhenping Xie</a>. Fanyu's research interests previously focus on LLMs driven Requirement Engineering, and interpretable deep learning methods in Natural Language Processing. <a href="https://drive.google.com/file/d/1HpQaWwDjD96YsXGU7lXgeCPeNgjdKgy0/view?usp=drive_link">Download my CV</a></p>
     </header>
 <main>
 <h2>Education</h2>
 <ul>
-<li>06/2023 - current: PhD student in HumanISE Lab, Monash University</li>
+<li>03/2024 - current: PhD student in HumanISE Lab, Monash University</li>
 <li>09/2020 - 06/2023: M.S. in Jiangnan University (China)</li>
 <li>09/2016 - 06/2020: B.S. in Dalian Maritime University (China)</li>
 </ul>
