--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    <nav>
   <a href="mailto:fanyu.wang@monash.edu">Email</a>
 
-<a href="paper_introduction.html">Paper</a>
+<a href="paper_introduction.html">Pubs</a>
 
   <a href="https://twitter.com/fanyuuwang">Twitter</a>
 
